k8s/healthcaredeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcare-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: healthcare
  template:
    metadata:
      labels:
        app: healthcare
    spec:
      containers:
      - name: healthcare
        image: 794038216301.dkr.ecr.ap-south-1.amazonaws.com/gitops-webapp:<IMAGE_TAG>
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: healthcare-service
spec:
  selector:
    app: healthcare
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
